# tdx_easy_https

./: .gitignore  README.md  docker_compose.yml  start.sh
attestd/: Cargo.toml  Dockerfile
attestd/src/: main.rs
client/native/: Cargo.toml
client/native/src/: main.rs
client/node/: verify_client_tdx.mjs
client/tdx_quote_verifier/: Cargo.toml
client/tdx_quote_verifier/src/: main.rs
echo/: Cargo.toml  Dockerfile
echo/src/: main.rs
