[package]
name = "attestd"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"
sha2 = { version = "0.10", features = ["std"] }
instant-acme = { version = "0.8.5", default-features = false, features = ["hyper-rustls", "ring"] }
rcgen = "0.14.8"
uuid = { version = "1.8", features = ["v4"] }
