[package]
name = "native_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
hex = "0.4"
sha2 = { version = "0.10", features = ["std"] }
rand = "0.8"
tdx-quote = "0.0.3"